--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,10 +7,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Podcast Web App Template</title>
     <!--CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+    <link rel="stylesheet" href="css/main.css">
     <!--CSS-->
 </head>
 <body>
+    <header class="header">
+        <div class="header__wrap wrap">
+            <div class="row middle-xs">
+                <div class="col-xs-6 start-xs ">
+                    <h2 class="header__title">
+                        Podcast Web App Template
+                    </h2>
+                </div>
+                <div class="col-xs-6 end-xs">
+                    <img src="img/ava.jpg" class="header__ava" alt="ava">
+                </div>
+            </div>
+        </div>
+    </header>
 
+    <section class="user-podcast-list">
+        <div class="container wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2 class="user-podcast-list__title">
+                        My podcasts
+                    </h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-4">
+                    <div class="user-podcast-item">
+                        <h3 class="user-podcast-item__title">
+
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 <!--JavaScript-->
 
 <!--JavaScript-->
