--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,28 +21,99 @@
                         Podcast Web App Template
                     </h2>
                 </div>
-                <div class="col-xs-6 end-xs">
-                    <img src="img/ava.jpg" class="header__ava" alt="ava">
+                <div class="col-xs-6">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="avatar__wrap">
+                                <span class="avatar__name">evgeny</span>
+                                <img src="img/ava.jpg" class="avatar__img" alt="ava">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <section class="user-podcast-list">
-        <div class="container wrap">
+    <section class="user-podcast">
+        <div class="container wrap user-podcast__wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2 class="user-podcast-list__title">
+                    <h2 class="user-podcast__title">
                         My podcasts
                     </h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 user-podcast-item__wrap">
                     <div class="user-podcast-item">
-                        <h3 class="user-podcast-item__title">
+                        <div class="row middle-xs">
+                            <div class="col-xs-8">
+                                <h3 class="user-podcast-item__title">
+                                    Радио-Т
+                                </h3>
+                                <p class="user-podcast-item__description">
+                                    Еженедельные разговоры на темы хайтек, высоких компьютерных технологий, гаджетов, облаков, программирования и прочего интересного из мира ИТ.
+                                </p>
+                            </div>
+                            <div class="col-xs-4">
+                                <img src="img/radiot.jpg" class="user-podcast-item__logo" alt="radiot">
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                        </h3>
+                <div class="col-xs-12 col-sm-6 col-md-4 user-podcast-item__wrap">
+                    <div class="user-podcast-item">
+                        <div class="row middle-xs">
+                            <div class="col-xs-8">
+                                <h3 class="user-podcast-item__title">
+                                    UWP
+                                </h3>
+                                <p class="user-podcast-item__description">
+                                    Невыдуманные рассказы из американской жизни
+                                </p>
+                            </div>
+                            <div class="col-xs-4">
+                                <img src="img/uwp.jpg" class="user-podcast-item__logo" alt="uwp">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-4 user-podcast-item__wrap">
+                    <div class="user-podcast-item">
+                        <div class="row middle-xs">
+                            <div class="col-xs-8">
+                                <h3 class="user-podcast-item__title">
+                                    Отвратительные мужики
+                                </h3>
+                                <p class="user-podcast-item__description">
+                                    Не унывай и не тупей! Независимый ресурс о знаниях и развлечениях, подкаст и коммьюнити.
+                                </p>
+                            </div>
+                            <div class="col-xs-4">
+                                <img src="img/disgustingmen.jpg" class="user-podcast-item__logo" alt="disgustingmen">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-4 user-podcast-item__wrap">
+                    <div class="user-podcast-item">
+                        <div class="row middle-xs">
+                            <div class="col-xs-8">
+                                <h3 class="user-podcast-item__title">
+                                    Завтракаст
+                                </h3>
+                                <p class="user-podcast-item__description">
+                                    Завтрашний день в технологиях, играх, медиа и интернете. Обо всём понемногу, с юмором и хорошей музыкой. 18+
+                                </p>
+                            </div>
+                            <div class="col-xs-4">
+                                <img src="img/zavtracast.jpg" class="user-podcast-item__logo" alt="zavtracast">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
