--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,10 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="img/favicon.svg">
+    <link rel=icon href="img/favicon.svg" sizes="any" type="image/svg+xml">
     <title>Podcast Web App Template</title>
     <!--CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <!--CSS-->
 </head>
@@ -25,7 +29,9 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="avatar__wrap">
-                                <span class="avatar__name">evgeny</span>
+                                <span class="avatar__name">
+                                    Evgeny Nadolinsky
+                                </span>
                                 <img src="img/ava.jpg" class="avatar__img" alt="ava">
                             </div>
                         </div>
@@ -39,7 +45,7 @@
         <div class="container wrap user-podcast__wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2 class="user-podcast__title">
+                    <h2 class="podcast-app__title">
                         My podcasts
                     </h2>
                 </div>
@@ -47,34 +53,38 @@
             <div class="row">
 
                 <% const userPodcastList = [
-                    {title: 'Радио-Т', description: 'Еженедельные разговоры на темы хайтек, высоких компьютерных технологий, гаджетов, облаков, программирования и прочего интересного из мира ИТ.', image: 'radiot' ,url: 'https://radio-t.com/'},
-                    {title: 'UWP', description: 'Невыдуманные рассказы из американской жизни', image: 'uwp' ,url: 'https://podcast.umputun.com/'},
-                    {title: 'Отвратительные мужики', description: 'Не унывай и не тупей! Независимый ресурс о знаниях и развлечениях, подкаст и коммьюнити.', image: 'disgustingmen' ,url: 'https://disgustingmen.com/'},
-                    {title: 'Завтракаст', description: 'Завтрашний день в технологиях, играх, медиа и интернете. Обо всём понемногу, с юмором и хорошей музыкой. 18+', image: 'zavtracast' ,url: 'https://zavtracast.ru/'},
+                    {title: 'Радио-Т', description: 'Еженедельные разговоры на темы хайтек, высоких компьютерных технологий, гаджетов, облаков, программирования и прочего интересного из мира ИТ.', image: 'radiot' ,url: 'https://radio-t.com/', delay: '0'},
+                    {title: 'UWP', description: 'Невыдуманные рассказы из американской жизни', image: 'uwp' ,url: 'https://podcast.umputun.com/', delay: '0.3'},
+                    {title: 'Отвратительные мужики', description: 'Не унывай и не тупей! Независимый ресурс о знаниях и развлечениях, подкаст и коммьюнити.', image: 'disgustingmen' ,url: 'https://disgustingmen.com/', delay: '0.6'},
+                    {title: 'Завтракаст', description: 'Завтрашний день в технологиях, играх, медиа и интернете. Обо всём понемногу, с юмором и хорошей музыкой. 18+', image: 'zavtracast' ,url: 'https://zavtracast.ru/', delay: '0.9'},
                 ]; %>
 
                 <% userPodcastList.forEach((item) => { %>
-                    <div class="col-xs-12 col-sm-6 col-md-4 user-podcast-item__wrap">
+                    <div class="col-xs-12 col-sm-6 col-md-4 user-podcast-item__wrap wow fadeIn" data-wow-delay="<%= item.delay %>s">
                         <div class="user-podcast-item">
-                            <div class="row">
-                                <div class="col-xs-8">
+                            <div class="row middle-xs">
+                                <div class="col-xs-7 col-sm-9">
                                     <div class="user-podcast-item__info">
                                         <h3 class="user-podcast-item__title">
                                             <%= item.title %>
                                         </h3>
-                                        <p class="user-podcast-item__description">
-                                            <%= item.description %>
-                                        </p>
-                                        <a href="<%= item.url %>" class="user-podcast-item__link">
-                                            <i class="icon-globe"></i>
-                                            <%= item.url %>
-                                        </a>
                                     </div>
                                 </div>
-                                <div class="col-xs-4">
+                                <div class="col-xs-4 col-sm-3 first-xs last-sm">
                                     <div class="user-podcast-item__logo-wrap">
                                         <img src="img/<%= item.image %>.jpg" class="user-podcast-item__logo" alt="<%= item.image %>">
                                     </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <p class="user-podcast-item__description">
+                                        <%= item.description %>
+                                    </p>
+                                    <a href="<%= item.url %>" class="user-podcast-item__link">
+                                        <i class="icon-globe"></i>
+                                        <%= item.url %>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -83,9 +93,68 @@
 
             </div>
         </div>
-    </section>
-<!--JavaScript-->
+    </section class="last-podcast">
 
-<!--JavaScript-->
+    <section>
+        <div class="container wrap last-podcast__wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2 class="podcast-app__title">
+                        Last podcast
+                    </h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="last-podcast-item">
+                        <div class="last-podcast-item__wrap last-podcast-item__right">
+                            <div class="row middle-xs">
+                                <div class="col-xs-7 col-sm-9">
+                                    <h3 class="last-podcast-item__title">
+                                        Радио-Т 638
+                                    </h3>
+                                    <a href="https://radio-t.com/p/2019/02/23/podcast-638/" class="last-podcast-item__link">
+                                        <i class="icon-globe"></i>
+                                        https://radio-t.com/p/2019/02/23/podcast-638/
+                                    </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-3 first-xs last-sm">
+                                    <div class="last-podcast-item__logo-wrap">
+                                        <img src="img/radiot.jpg" class="last-podcast-item__logo" alt="radiot">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="last-podcast-item__wrap last-podcast-item__left">
+                            <ul class="last-podcast-item__list">
+                                <li>Samsung показал складной Galaxy</li>
+                                <li>Galaxy Fold ждет успех. Или нет</li>
+                                <li>Долой SPA</li>
+                                <li>RethinkDB: почему мы закрылись</li>
+                                <li>Apple планирует захватить TV</li>
+                                <li>Fedora Atomic закрыт</li>
+                                <li>Уход Splunk</li>
+                                <li>Как не делать формы логина</li>
+                                <li>Темы слушателей</li>
+                            </ul>
+                            <audio class="js-player" controls>
+                                <source src="http://cdn.radio-t.com/rt_podcast638.mp3" type="audio/mp3" />
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--JavaScript-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.min.js"></script>
+    <!--JavaScript-->
+
+    <script>
+        const players = Array.from(document.querySelectorAll('.js-player')).map(p => new Plyr(p));
+    </script>
+
 </body>
 </html>
