--- a/src/less/main.less
+++ b/src/less/main.less
@@ -15,6 +15,7 @@
 @block-color: #282b35;
 @highlight-color_secondary: #009cff;
 @highlight-color_primary: #e46a68;
+@border-radius: 10px;
 
 // @text-color: #383838;
 // @bg-color: #f5f7fc;
@@ -65,8 +66,9 @@ body{
 
 /* Plyr */
 .plyr--audio .plyr__controls{
-    // background-color: @bg-color;
-    border-radius: 5px;
+    background-color: transparent;
+    border-radius: @border-radius;
+    padding: 0px;
 }
 
 .plyr--audio .plyr__control.plyr__tab-focus, .plyr--audio .plyr__control:hover, .plyr--audio .plyr__control[aria-expanded=true]{
@@ -123,12 +125,27 @@ body{
         align-items: center;
     }
 
+    &-img__wrap{
+        position: relative;
+        
+        &:after{
+            content: '';
+            position: absolute;
+            bottom: 2%;
+            right: 2%;
+            border: 2px solid @block-color;
+            height: 10px;
+            width: 10px;
+            background-color: #8ac176;
+            border-radius: 50%;
+        }
+    }
+
     &__img{
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        border: 4px solid @highlight-color_primary;
-        margin-left: 10px;
+        margin-left: 17px;
 
         @media @tablet {
             width: 50px;
@@ -144,13 +161,14 @@ body{
     
         @media @tablet {
             visibility: visible;
-            font-size: 13px;
+            font-size: 12px;
         }
     
         @media @desktop {
-            font-size: 14px;
+            font-size: 13px;
         }
     }
+    
 }
 /* avatar */
 
@@ -189,7 +207,7 @@ body{
         height: 100%;
         background-color: @block-color;
         box-sizing: border-box;
-        border-radius: 5px;
+        border-radius: @border-radius;
         padding: 20px;
 
         @media @tablet {
@@ -198,10 +216,6 @@ body{
     
         @media @desktop {
             padding: 30px;
-        }
-
-        &__info{
-
         }
 
         &__wrap{
@@ -251,7 +265,7 @@ body{
 
         &__logo{
             width: 90%;
-            border-radius: 5px;
+            border-radius: @border-radius;
 
             @media @tablet {
                 width: 100%;
@@ -279,7 +293,7 @@ body{
 
     &-item{
         background-color: @block-color;
-        border-radius: 5px;
+        border-radius: @border-radius;
         box-sizing: border-box;
         margin-bottom: 15px;
         padding: 20px;
@@ -297,6 +311,7 @@ body{
             font-weight: 700;
             color: @text-color;
             font-size: 19px;
+            margin: 0px;
         
             @media @tablet {
                 font-size: 22px;
@@ -304,6 +319,22 @@ body{
         
             @media @desktop {
                 font-size: 23px;
+            }
+        }
+
+        &__date{
+            font-family: @header-font;
+            font-weight: 500;
+            color: #6b7282;
+            font-size: 10px;
+            margin: 5px 0px;
+
+            @media @tablet {
+                font-size: 11px;
+            }
+        
+            @media @desktop {
+                font-size: 12px;
             }
         }
 
@@ -322,7 +353,7 @@ body{
 
         &__logo{
             width: 90%;
-            border-radius: 5px;
+            border-radius: @border-radius;
 
             @media @tablet {
                 width: 100%;
@@ -352,6 +383,27 @@ body{
             @media @desktop {
                 font-size: 15px;
             }
+        }
+
+        &__content{
+            font-family: @header-font;
+            color: @text-color;
+            font-weight: 300;
+            line-height: 20px;
+            font-size: 14px;
+
+            & a{
+                color: @text-color;
+            }
+
+            & img{
+                width: 100px;
+                border-radius: @border-radius;
+            }
+        }
+
+        &__player-wrap{
+            margin-top: 30px;
         }
     }
 }
